--- a/index.html
+++ b/index.html
@@ -339,8 +339,6 @@
                 </ul>
             </div>
         </section>
-        <!-- Overlay Element -->
-        <div class="overlay"></div>
 
 
     </main>
@@ -355,7 +353,6 @@
                     solutions.
                 </p>
             </div>
-
             <div class="footer-socials">
                 <p class="social-label">Social media</p>
                 <ul class="social-list-footer">
@@ -389,25 +386,79 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-subscribe-block">
+                <p class="social-label">Subscribe</p>
+                <form class="footer-subscribe-form" action="#" method="post" name="subscribe">
+                    <label for="footer-subscribe" class="visually-hidden">Email for subscription</label>
+                    <input class="footer-subscribe-input" type="email" name="email" id="footer-subscribe"
+                        placeholder="E-mail" required />
+                    <button class="footer-subscribe-btn" type="submit">
+                        Subscribe
+                        <svg class="footer-subscribe-icon" width="20" height="20"
+                            style="margin-left:8px;vertical-align:middle;">
+                            <use href="./images/icons.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
-
-    <div class="modal">
-        <button type="button" class="modal-close" aria-label="Close">
-            <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-        </button>
-        <form class="modal-form" action="#" name="contact" method="post" data-netlify="true"
-            netlify-honeypot="bot-field">
-            <input type="hidden" name="form-name" value="contact">
-            <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field"></p>
-            <h2 class="modal-title">Request a Callback</h2>
-            <p class="modal-text">Leave your phone number and we will call you back within 15 minutes.</p>
-            <label>
-                <span class="visually-hidden">Phone</span>
-                <input class="modal-input" type="tel" name="phone" placeholder="+1 (___) ___-____" required />
-            </label>
+    <!-- Modal Backdrop (Overlay) -->
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="modal-close" aria-label="Close">
+                <svg width="24" height="24">
+                    <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+            </button>
+            <form class="modal-form" action="#" name="contact" method="post" data-netlify="true"
+                netlify-honeypot="bot-field">
+                <input type="hidden" name="form-name" value="contact">
+                <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field"></p>
+                <h2 class="modal-title">Leave your contacts and we will call you back</h2>
+                <div class="modal-field">
+                    <label for="modal-name" class="modal-label">Name</label>
+                    <div class="modal-input-wrap">
+                        <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-man"></use>
+                        </svg>
+                        <input class="modal-input" type="text" name="name" id="modal-name" placeholder="" required />
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="modal-phone" class="modal-label">Phone</label>
+                    <div class="modal-input-wrap">
+                        <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-tel"></use>
+                        </svg>
+                        <input class="modal-input" type="tel" name="phone" id="modal-phone" placeholder="" required />
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="modal-email" class="modal-label">Email</label>
+                    <div class="modal-input-wrap">
+                        <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        <input class="modal-input" type="email" name="email" id="modal-email" placeholder="" required />
+                    </div>
+                </div>
+                <div class="modal-field">
+                    <label for="modal-comment" class="modal-label">Comment</label>
+                    <textarea class="modal-textarea" name="comment" id="modal-comment"
+                        placeholder="Text input"></textarea>
+                </div>
+                <div class="modal-checkbox-field">
+                    <input type="checkbox" id="modal-privacy" name="privacy" required />
+                    <label for="modal-privacy" class="modal-checkbox-label">
+                        I accept the terms and conditions of the <a href="#" class="modal-privacy-link">Privacy
+                            Policy</a>
+                    </label>
+                </div>
+                <button type="submit" class="modal-submit">Send</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
