--- a/index.html
+++ b/index.html
@@ -386,16 +386,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="footer-subscribe-block">
-                <p class="social-label">Subscribe</p>
-                <form class="footer-subscribe-form" action="#" method="post" name="subscribe">
-                    <label for="footer-subscribe" class="visually-hidden">Email for subscription</label>
-                    <input class="footer-subscribe-input" type="email" name="email" id="footer-subscribe"
+            <div class="footer-form-container">
+                <p class="footer-form-title">Subscribe</p>
+                <form class="footer-form" action="#" method="post" name="subscribe">
+                    <label class="footer-form-label visually-hidden" for="footer-email">Email for subscription</label>
+                    <input class="footer-form-input" type="email" name="footer-email" id="footer-email"
                         placeholder="E-mail" required />
-                    <button class="footer-subscribe-btn" type="submit">
+                    <button class="footer-form-btn" type="submit">
                         Subscribe
-                        <svg class="footer-subscribe-icon" width="20" height="20"
-                            style="margin-left:8px;vertical-align:middle;">
+                        <svg class="footer-form-icon" width="24" height="24" style="margin-left:16px;">
                             <use href="./images/icons.svg#icon-telegram"></use>
                         </svg>
                     </button>
@@ -403,59 +402,65 @@
             </div>
         </div>
     </footer>
-    <!-- Modal Backdrop (Overlay) -->
+    <!-- Modal Backdrop (Overlay, hidden by default) -->
     <div class="backdrop">
         <div class="modal">
-            <button type="button" class="modal-close" aria-label="Close">
-                <svg width="24" height="24">
-                    <use href="./images/icons.svg#icon-telegram"></use>
+            <button type="button" class="modal-close-button" aria-label="Close">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <form class="modal-form" action="#" name="contact" method="post" data-netlify="true"
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form" action="#" name="contact-form" method="post" data-netlify="true"
                 netlify-honeypot="bot-field">
-                <input type="hidden" name="form-name" value="contact">
-                <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field"></p>
-                <h2 class="modal-title">Leave your contacts and we will call you back</h2>
-                <div class="modal-field">
-                    <label for="modal-name" class="modal-label">Name</label>
-                    <div class="modal-input-wrap">
-                        <svg class="modal-icon" width="18" height="18">
+                <input type="hidden" name="form-name" value="contact-form">
+                <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field"></input></p>
+                <div class="modal-form-field">
+                    <label class="modal-form-label" for="user-name">Name</label>
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="text" name="user-name" id="user-name" required />
+                        <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-man"></use>
                         </svg>
-                        <input class="modal-input" type="text" name="name" id="modal-name" placeholder="" required />
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="modal-phone" class="modal-label">Phone</label>
-                    <div class="modal-input-wrap">
-                        <svg class="modal-icon" width="18" height="18">
+                <div class="modal-form-field">
+                    <label class="modal-form-label" for="user-phone">Phone</label>
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" required />
+                        <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-tel"></use>
                         </svg>
-                        <input class="modal-input" type="tel" name="phone" id="modal-phone" placeholder="" required />
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="modal-email" class="modal-label">Email</label>
-                    <div class="modal-input-wrap">
-                        <svg class="modal-icon" width="18" height="18">
+                <div class="modal-form-field">
+                    <label class="modal-form-label" for="user-email">Email</label>
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="email" name="user-email" id="user-email" required />
+                        <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
-                        <input class="modal-input" type="email" name="email" id="modal-email" placeholder="" required />
                     </div>
                 </div>
-                <div class="modal-field">
-                    <label for="modal-comment" class="modal-label">Comment</label>
-                    <textarea class="modal-textarea" name="comment" id="modal-comment"
+                <div class="modal-form-field modal-form-field-comment">
+                    <label class="modal-form-label" for="user-comment">Comment</label>
+                    <textarea class="modal-form-textarea" name="user-comment" id="user-comment"
                         placeholder="Text input"></textarea>
                 </div>
-                <div class="modal-checkbox-field">
-                    <input type="checkbox" id="modal-privacy" name="privacy" required />
-                    <label for="modal-privacy" class="modal-checkbox-label">
-                        I accept the terms and conditions of the <a href="#" class="modal-privacy-link">Privacy
+                <div class="modal-form-checkbox-field">
+                    <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
+                        name="user-privacy" value="true" required />
+                    <label class="modal-form-checkbox-label" for="user-privacy">
+                        <span class="modal-form-custom-checkbox">
+                            <svg class="modal-form-checkbox-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the <a class="modal-form-privacy-link" href="#">Privacy
                             Policy</a>
                     </label>
                 </div>
-                <button type="submit" class="modal-submit">Send</button>
+                <button type="submit" class="modal-form-submit">Send</button>
             </form>
         </div>
     </div>
