--- a/index.html
+++ b/index.html
@@ -387,19 +387,21 @@
                 </ul>
             </div>
             <div class="footer-form-container">
-                <form class="footer-form" action="#" method="post" name="subscribe">
-                    <label class="footer-form-label" for="footer-email">
-                        <span class="footer-form-title">Subscribe</span>
-                        <input class="footer-form-input" type="email" name="footer-email" id="footer-email"
-                            placeholder="E-mail" required />
-                    </label>
-                    <button class="footer-form-btn" type="submit">
-                        Subscribe
-                        <svg class="footer-form-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon-telegram"></use>
-                        </svg>
-                    </button>
-                </form>
+                <div class="footer-subscribe-block">
+                    <p class="footer-subscribe-title">Subscribe</p>
+                    <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
+                        <label class="footer-subscribe-label" for="subscribe-email">
+                            <input class="footer-subscribe-input" type="email" name="subscribe-email"
+                                id="subscribe-email" placeholder="E-mail" required />
+                        </label>
+                        <button class="footer-subscribe-btn" type="submit">
+                            Subscribe
+                            <svg class="footer-subscribe-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-telegram"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
