--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
             <div class="footer-form-container">
                 <div class="footer-subscribe-block">
                     <p class="footer-subscribe-title">Subscribe</p>
-                    <form class="footer-subscribe-form" action="#" method="post" name="subscribe_form">
-                        <label class="footer-subscribe-label" for="subscribe_email">
-                            <input class="footer-subscribe-input" type="email" name="subscribe_email"
-                                id="subscribe_email" placeholder="E-mail" required />
+                    <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
+                        <label class="footer-subscribe-label" for="subscribe-email">
+                            <input class="footer-subscribe-input" type="email" name="subscribe-email"
+                                id="subscribe-email" placeholder="E-mail" required />
                         </label>
                         <button class="footer-subscribe-btn" type="submit">
                             Subscribe
