--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     <!-- Footer Section -->
 
     <footer class="footer-section">
-        <div class="container-footer-container container">
+        <div class="footer-container container">
             <div class="footer-left">
                 <a href="./index.html" class="logo-link">Web<span class="logo-accent">Studio</span></a>
                 <p class="footer-text">
@@ -390,10 +390,9 @@
                 <div class="footer-subscribe-block">
                     <p class="footer-subscribe-title">Subscribe</p>
                     <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
-                        <label class="footer-subscribe-label" for="subscribe-email">
-                            <input class="footer-subscribe-input" type="email" name="subscribe-email"
-                                id="subscribe-email" placeholder="E-mail" required />
-                        </label>
+                        <label class="footer-subscribe-label" for="subscribe-email">E-mail</label>
+                        <input class="footer-subscribe-input" type="email" name="subscribe-email" id="subscribe-email"
+                            placeholder="E-mail" required />
                         <button class="footer-subscribe-btn" type="submit">
                             Subscribe
                             <svg class="footer-subscribe-icon" width="24" height="24">
@@ -405,6 +404,7 @@
             </div>
         </div>
     </footer>
+
     <!-- Modal Backdrop (Overlay, hidden by default) -->
     <div class="backdrop">
         <div class="modal">
