--- a/index.html
+++ b/index.html
@@ -354,45 +354,48 @@
                 </p>
             </div>
             <div class="footer-socials">
-                <p class="social-label">Social media</p>
-                <ul class="social-list-footer">
-                    <li class="social-item-footer">
-                        <a href="#" class="social-link-footer" aria-label="Instagram">
-                            <svg class="icon-social-footer" width="24" height="24">
+                <p class="footer-socials-title">Social media</p>
+                <ul class="footer-socials-list">
+                    <li class="footer-socials-item">
+                        <a href="#" class="footer-socials-link" aria-label="Instagram">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item-footer">
-                        <a href="#" class="social-link-footer" aria-label="Twitter">
-                            <svg class="icon-social-footer" width="24" height="24">
+                    <li class="footer-socials-item">
+                        <a href="#" class="footer-socials-link" aria-label="Twitter">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item-footer">
-                        <a href="#" class="social-link-footer" aria-label="Facebook">
-                            <svg class="icon-social-footer" width="24" height="24">
+                    <li class="footer-socials-item">
+                        <a href="#" class="footer-socials-link" aria-label="Facebook">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-item-footer">
-                        <a href="#" class="social-link-footer" aria-label="LinkedIn">
-                            <svg class="icon-social-footer" width="24" height="24">
+                    <li class="footer-socials-item">
+                        <a href="#" class="footer-socials-link" aria-label="LinkedIn">
+                            <svg class="footer-socials-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
             </div>
+
+            <!---->
             <div class="footer-form-container">
                 <div class="footer-subscribe-block">
                     <p class="footer-subscribe-title">Subscribe</p>
                     <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
-                        <label class="footer-subscribe-label" for="subscribe-email">E-mail</label>
-                        <input class="footer-subscribe-input" type="email" name="subscribe-email" id="subscribe-email"
-                            placeholder="E-mail" required />
+                        <label class="footer-subscribe-label">
+                            <input class="footer-subscribe-input" type="email" name="subscribe-email"
+                                id="subscribe-email" placeholder="E-mail" required />
+                        </label>
                         <button class="footer-subscribe-btn" type="submit">
                             Subscribe
                             <svg class="footer-subscribe-icon" width="24" height="24">
@@ -402,6 +405,7 @@
                     </form>
                 </div>
             </div>
+
         </div>
     </footer>
 
