--- a/index.html
+++ b/index.html
@@ -389,21 +389,21 @@
 
             <!---->
             <div class="footer-form-container">
-                <div class="footer-subscribe-block">
-                    <p class="footer-subscribe-title">Subscribe</p>
-                    <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
-                        <label class="footer-subscribe-label">
-                            <input class="footer-subscribe-input" type="email" name="subscribe-email"
-                                id="subscribe-email" placeholder="E-mail" required />
-                        </label>
-                        <button class="footer-subscribe-btn" type="submit">
-                            Subscribe
-                            <svg class="footer-subscribe-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-telegram"></use>
-                            </svg>
-                        </button>
-                    </form>
-                </div>
+
+                <p class="footer-subscribe-title">Subscribe</p>
+                <form class="footer-subscribe-form" action="#" method="post" name="subscribe-form">
+                    <label class="footer-subscribe-label">
+                        <input class="footer-subscribe-input" type="email" name="subscribe-email" id="subscribe-email"
+                            placeholder="E-mail" required />
+                    </label>
+                    <button class="footer-subscribe-btn" type="submit">
+                        Subscribe
+                        <svg class="footer-subscribe-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-telegram"></use>
+                        </svg>
+                    </button>
+                </form>
+
             </div>
 
         </div>
