--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <p class="modal-form-desc">Leave your contacts and we will call you back</p>
             <form class="modal-form" action="#" name="contact-form" method="post" data-netlify="true"
                 data-netlify-honeypot="bot-field">
                 <input type="hidden" name="form-name" value="contact-form">
