--- a/index.html
+++ b/index.html
@@ -422,54 +422,56 @@
                 data-netlify-honeypot="bot-field">
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-name">Name</label>
-                    <div class="modal-form-input-wrap"></div>
                     <input type="hidden" name="form-name" value="contact-form">
                     <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field" /></p>
-                    <input class="modal-form-input" type="text" name="user-name" id="user-name" required />
-                    <svg class="modal-form-icon" width="18" height="24">
-                        <use href="./images/icons.svg#icon-man"></use>
-                    </svg>
+
+
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="text" name="user-name" id="user-name" required />
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-man"></use>
+                        </svg>
+                    </div>
                 </div>
+                <div class="modal-form-field">
+                    <label class="modal-form-label" for="user-phone">Phone</label>
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" required />
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-tel"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-form-field">
+                    <label class="modal-form-label" for="user-email">Email</label>
+                    <div class="modal-form-input-wrap">
+                        <input class="modal-form-input" type="email" name="user-email" id="user-email" required />
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="modal-form-field modal-form-field-comment">
+                    <label class="modal-form-label" for="user-comment">Comment</label>
+                    <textarea class="modal-form-textarea" name="user-comment" id="user-comment"
+                        placeholder="Text input"></textarea>
+                </div>
+                <div class="modal-form-checkbox-field">
+                    <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
+                        name="user-privacy" value="true" required />
+                    <label class="modal-form-checkbox-label" for="user-privacy">
+                        <span class="modal-form-custom-checkbox">
+                            <svg class="modal-form-checkbox-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-check"></use>
+                            </svg>
+                        </span>
+                        I accept the terms and conditions of the <a class="modal-form-privacy-link" href="#">Privacy
+                            Policy</a>
+                    </label>
+                </div>
+                <button type="submit" class="modal-form-submit">Send</button>
+            </form>
         </div>
-        <div class="modal-form-field">
-            <label class="modal-form-label" for="user-phone">Phone</label>
-            <div class="modal-form-input-wrap">
-                <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" required />
-                <svg class="modal-form-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-tel"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="modal-form-field">
-            <label class="modal-form-label" for="user-email">Email</label>
-            <div class="modal-form-input-wrap">
-                <input class="modal-form-input" type="email" name="user-email" id="user-email" required />
-                <svg class="modal-form-icon" width="18" height="24">
-                    <use href="./images/icons.svg#icon-mail"></use>
-                </svg>
-            </div>
-        </div>
-        <div class="modal-form-field modal-form-field-comment">
-            <label class="modal-form-label" for="user-comment">Comment</label>
-            <textarea class="modal-form-textarea" name="user-comment" id="user-comment"
-                placeholder="Text input"></textarea>
-        </div>
-        <div class="modal-form-checkbox-field">
-            <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy" name="user-privacy"
-                value="true" required />
-            <label class="modal-form-checkbox-label" for="user-privacy">
-                <span class="modal-form-custom-checkbox">
-                    <svg class="modal-form-checkbox-icon" width="10" height="8">
-                        <use href="./images/icons.svg#icon-check"></use>
-                    </svg>
-                </span>
-                I accept the terms and conditions of the <a class="modal-form-privacy-link" href="#">Privacy
-                    Policy</a>
-            </label>
-        </div>
-        <button type="submit" class="modal-form-submit">Send</button>
-        </form>
-    </div>
     </div>
 </body>
 
