--- a/index.html
+++ b/index.html
@@ -420,16 +420,13 @@
             <p class="modal-form-desc">Leave your contacts and we will call you back</p>
             <form class="modal-form" action="#" name="contact-form" method="post" data-netlify="true"
                 data-netlify-honeypot="bot-field">
-
-                <!-- Службові поля форми -->
-                <input type="hidden" name="form-name" value="contact-form">
-                <p class="visually-hidden">
-                    Don't fill this out if you're human: <input name="bot-field" />
-                </p>
-
-                <!-- Поле Name -->
                 <div class="modal-form-field">
+
                     <label class="modal-form-label" for="user-name">Name</label>
+                    <input type="hidden" name="form-name" value="contact-form">
+                    <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field" /></p>
+
+
                     <div class="modal-form-input-wrap">
                         <input class="modal-form-input" type="text" name="user-name" id="user-name" required />
                         <svg class="modal-form-icon" width="18" height="24">
@@ -437,8 +434,6 @@
                         </svg>
                     </div>
                 </div>
-
-                <!-- Поле Phone -->
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-phone">Phone</label>
                     <div class="modal-form-input-wrap">
@@ -448,8 +443,6 @@
                         </svg>
                     </div>
                 </div>
-
-                <!-- Поле Email -->
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-email">Email</label>
                     <div class="modal-form-input-wrap">
@@ -459,15 +452,11 @@
                         </svg>
                     </div>
                 </div>
-
-                <!-- Поле Comment -->
                 <div class="modal-form-field modal-form-field-comment">
                     <label class="modal-form-label" for="user-comment">Comment</label>
                     <textarea class="modal-form-textarea" name="user-comment" id="user-comment"
                         placeholder="Text input"></textarea>
                 </div>
-
-                <!-- Checkbox Privacy -->
                 <div class="modal-form-checkbox-field">
                     <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
                         name="user-privacy" value="true" required />
@@ -481,11 +470,8 @@
                             Policy</a>
                     </label>
                 </div>
-
-                <!-- Кнопка Submit -->
                 <button type="submit" class="modal-form-submit">Send</button>
             </form>
-
         </div>
     </div>
 </body>
