--- a/index.html
+++ b/index.html
@@ -418,18 +418,13 @@
                 </svg>
             </button>
             <p class="modal-form-desc">Leave your contacts and we will call you back</p>
+            <!--form-->
             <form class="modal-form" action="#" name="contact-form" method="post" data-netlify="true"
                 data-netlify-honeypot="bot-field">
                 <div class="modal-form-field">
-
                     <label class="modal-form-label" for="user-name">Name</label>
-                    <div class="modal-icons-wrap">
-                        <input type="hidden" name="form-name" value="contact-form">
-                        <p class="visually-hidden">Don't fill this out if you're human: <input name="bot-field" /></p>
-
-                    </div>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="text" name="user-name" id="user-name" required />
+                        <input class="modal-form-input" type="text" name="user-name" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-man"></use>
                         </svg>
@@ -438,7 +433,7 @@
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-phone">Phone</label>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" required />
+                        <input class="modal-form-input" type="tel" name="user-phone" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-tel"></use>
                         </svg>
@@ -447,7 +442,7 @@
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-email">Email</label>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="email" name="user-email" id="user-email" required />
+                        <input class="modal-form-input" type="email" name="user-email" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
