--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-name">Name</label>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="text" name="user-name" placeholder="" />
+                        <input class="modal-form-input" type="text" name="user-name" id="user-name" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-man"></use>
                         </svg>
