--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-phone">Phone</label>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="tel" name="user-phone" placeholder="" />
+                        <input class="modal-form-input" type="tel" name="user-phone" id="user-phone" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-tel"></use>
                         </svg>
@@ -442,7 +442,7 @@
                 <div class="modal-form-field">
                     <label class="modal-form-label" for="user-email">Email</label>
                     <div class="modal-form-input-wrap">
-                        <input class="modal-form-input" type="email" name="user-email" placeholder="" />
+                        <input class="modal-form-input" type="email" name="user-email" id="user-email" placeholder="" />
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-mail"></use>
                         </svg>
