--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
                         name="user-privacy" value="true" required />
                     <label class="modal-form-checkbox-label" for="user-privacy">
                         <span class="modal-form-custom-checkbox">
-                            <svg class="modal-form-checkbox-icon" width="10" height="8">
-                                <use href="./images/icons.svg#icon-check"></use>
+                            <svg class="modal-form-checkbox-icon" width="16" height="16">
+                                <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the <a class="modal-form-privacy-link" href="#">Privacy
